--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.glucode.about_you"
         minSdk 23
-        targetSdk 31
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -31,7 +31,9 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
+    namespace 'com.glucode.about_you'
 }
 
 dependencies {
